make sure drQ icon is on mobile too

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1822,6 +1822,8 @@ input, select, textarea {
 
 
 
+
+
    
 
 	ul {
@@ -2313,16 +2315,25 @@ input, select, textarea {
 
 /* Nav */
 
-.imageQ img {
-    position: relative;
-    top: 30px;
+.combine{
+
+	
+
+}
+
+.imageQ{
+position:relative;
+top:0px;
+left: -90px;
+
+
 }
 
 
 
 	#nav {
 		position: absolute;
-		top: -50px;
+		top: 0px;
 		left: 0;
 		width: 100%;
 		text-align: center;
@@ -2330,17 +2341,20 @@ input, select, textarea {
 		z-index: 1;
 		overflow: hidden;
 		background-color: #dddddd7a;
-		border-radius: 40px;
+		
+		
 	}
 
 		#nav > ul {
 			line-height: 0px;
+			
 			position: relative;
+			top:-30px;
 			display: inline-block;
 			margin: 0;
 			height: 21px;
-			border-left: solid 1px rgba(192, 192, 192, 0.35);
-			border-right: solid 1px rgba(192, 192, 192, 0.35);
+			/*border-left: solid 1px rgba(192, 192, 192, 0.35);
+			border-right: solid 1px rgba(192, 192, 192, 0.35);*/
 		}
 
 			#nav > ul:before, #nav > ul:after {
@@ -2351,8 +2365,8 @@ input, select, textarea {
 				top: 50%;
 				margin-top: -2px;
 				height: 5px;
-				border-top: solid 1px rgba(192, 192, 192, 0.35);
-				border-bottom: solid 1px rgba(192, 192, 192, 0.35);
+				/*border-top: solid 1px rgba(192, 192, 192, 0.35);
+				border-bottom: solid 1px rgba(192, 192, 192, 0.35);*/
 			}
 
 			#nav > ul:before {
